@@ -1,5 +1,13 @@
 2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/chfn.c: Use a bool when possible instead of int integers.
+	* src/chfn.c: Avoid implicit conversion of integers / chars to
+	booleans.
+	* src/chfn.c: Ignore return value of setlocale(),
+	bindtextdomain(), and textdomain().
+
+2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/logoutd.c: Use a bool when possible instead of int integers.
 	* src/logoutd.c: Avoid implicit conversion of pointers / integers
 	/ chars to booleans.
